# baidu-unlimited-ocr-portable

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  JOURNAL.md  NOTICE  README.md  SUMMARY-deepseekocr-gundam-exact-rp105-smoke.md  SUMMARY-deepseekocr-gundam-exact-smoke.md  SUMMARY-deepseekocr-gundam-exact-target-doc.md  SUMMARY-generation-steps-noimgend-noeos-64tok.md  SUMMARY-generation-steps-q5-noimgend-noeos-64tok.md  SUMMARY-parity-artifacts-native-onetok.md  SUMMARY-parity-artifacts-output-embeddings-onetok.md  SUMMARY-q4-prompts-sc02-document.md  SUMMARY-q4-prompts.md  SUMMARY-runtime-parity-noimgend-noeos-smoke.md  SUMMARY-runtime-parity-noimgend-smoke.md  SUMMARY-runtime-parity-smoke.md  SUMMARY-uocr-parity-bf16-eos-origin-ngram-default-target.md  SUMMARY-uocr-parity-bf16-grid-allprofiles.md  SUMMARY-uocr-parity-noimgend-noeos-smoke.md  SUMMARY-uocr-parity-q4-eos-origin-ngram-default-noimgend-target.md  SUMMARY-uocr-parity-q4-eos-origin-ngram-default-target.md  SUMMARY-uocr-parity-q4-eos-origin-ngram16-target.md  SUMMARY-uocr-parity-q4-ngram-target-allprofiles.md  SUMMARY-uocr-parity-q4-noimgend-noeos-full.md  SUMMARY-uocr-parity-q4-noimgend-noeos-target.md  SUMMARY-uocr-parity-q4-origin-ngram-default-minnew1-target.md  SUMMARY-uocr-parity-q4-suffix-ngram35-target-allprofiles.md  SUMMARY-uocr-placement-auto.md  SUMMARY.md  TEST-PROCEDURE.md  clippy.toml  pyproject.toml  safetensors_probe.cpp  tmp-cargo-metadata.csv  (+4 more)
crates/trapo-downloader/: Cargo.toml  NOTICE.md  README.md
crates/trapo-downloader/src/: downloader.rs  error.rs  file_system.rs  http.rs  lib.rs  request.rs
crates/trapo-downloader/tests/: download_file.rs
crates/trapo-native-runners/: Cargo.toml  README.md
crates/trapo-native-runners/src/ppocrv6/: args.rs  ffi.rs  ffi_types.rs  markers.rs  mod.rs  runtime.rs
crates/trapo-xtask/: Cargo.toml  README.md
crates/trapo-xtask/src/: archive.rs  main.rs  manifest.rs  native_deps.rs
src/trapo-ocr-native/: CMakeLists.txt
src/trapo-ocr-native/include/: trapo_ocr.h
src/trapo-ocr-native/src/: trapo_ocr.cpp
src/trapo-ocr-native/src/document_markdown/: document_markdown_common.cpp  document_markdown_common.hpp  document_markdown_engine.cpp  document_markdown_engine.hpp  document_markdown_image_processor.cpp  document_markdown_image_processor.hpp  document_markdown_onnx_runner.cpp  document_markdown_onnx_runner.hpp  document_markdown_result.cpp  document_markdown_sampling.cpp  document_markdown_tokenizer.cpp  document_markdown_tokenizer.hpp  document_markdown_tokenizer_common.cpp  document_markdown_tokenizer_internal.hpp  document_markdown_tokenizer_json_scanner.cpp  document_markdown_tokenizer_json_scanner.hpp  document_markdown_tokenizer_loader.cpp
src/trapo-ocr-native/src/model/: ocr_model_bundle.cpp  ocr_model_bundle.hpp
src/trapo-ocr-native/src/ort/: ort_cuda_ep.cpp  ort_cuda_ep.hpp
src/trapo-ocr-native/src/vl/: layout_analyzer.cpp  layout_analyzer.hpp  llama_vlm_runner.cpp  llama_vlm_runner.hpp  llama_vlm_support.cpp  llama_vlm_support.hpp  paddle_ocr_vl_engine.cpp  paddle_ocr_vl_engine.hpp  paddle_ocr_vl_result.cpp  paddle_ocr_vl_result.hpp
src/trapo-server/: Cargo.toml  QUALITY.md  README.md  build.rs
src/trapo-server/openapi/: trapo.openapi.json
src/trapo-server/src/: app.rs  catalog.rs  cli.rs  config.rs  embedding.rs  error.rs  folder_dialog.rs  ids.rs  lib.rs  logger.rs  main.rs  ocr.rs  ocr_geometry.rs  openapi.rs  openapi_modifiers.rs  pdf.rs  realtime.rs  realtime_event_types.rs  realtime_tests.rs  routes.rs  routes_diagnostics.rs  routes_models.rs  routes_system.rs  runtime_dll_search.rs  scanner.rs  shutdown.rs  storage.rs  types.rs  workbench_diagnostics_analytics_types.rs  workbench_diagnostics_types.rs  workbench_types.rs
src/trapo-server/src/app/: annotation_identity_runtime.rs  core.rs  diagnostics_methods.rs  diagnostics_recording.rs  diagnostics_records.rs  diagnostics_waterfall.rs  diagnostics_waterfall_build.rs  diagnostics_waterfall_group_helpers.rs  diagnostics_waterfall_groups.rs  diagnostics_waterfall_layout.rs  diagnostics_waterfall_work_units.rs  document_records.rs  download_helpers.rs  download_runtime.rs  download_targets.rs  engine_result_records.rs  ingest_engine_presets.rs  ingest_engine_validation.rs  ingest_engines.rs  ingest_pipeline.rs  ingest_pipeline_types.rs  ingest_start.rs  logging.rs  model_methods.rs  model_records.rs  ocr_stream_events.rs  ocr_stream_events_tests.rs  ocr_worker.rs  ocr_worker_adapters.rs  ocr_worker_runtime.rs  ocr_worker_tests.rs  page_completion.rs  page_diagnostics.rs  page_pipeline.rs  process_document.rs  process_document_records.rs  process_document_render.rs  rag_embedding_execution.rs  rag_embedding_page_spans.rs  rag_execution.rs  (+16 more)
src/trapo-server/src/catalog/: models.rs  profiles.rs  runtime.rs
src/trapo-server/src/embedding/: ffi.rs  session.rs  split.rs  tests.rs  worker.rs
src/trapo-server/src/logger/: parse.rs  process.rs
src/trapo-server/src/ocr/: ffi_engine.rs  ffi_helpers.rs  ffi_loader.rs  output.rs  parser.rs  parser_helpers.rs  tests.rs
src/trapo-server/src/storage/: annotation_identities.rs  core.rs  coverage_tests.rs  diagnostics_queries.rs  diagnostics_rows.rs  diagnostics_types.rs  diagnostics_writes.rs  download_events.rs  engine_output_rows.rs  engine_output_tests.rs  engine_outputs.rs  helpers.rs  id_migrations.rs  internal.rs  load.rs  migration_sql.rs  migration_sql_diagnostics.rs  migration_sql_downloads.rs  migration_sql_multi_engine.rs  migration_tests.rs  migrations.rs  queries.rs  rag_models.rs  rag_rows.rs  rag_search.rs  rag_tasks.rs  rag_tests.rs  rag_text.rs  rag_vectors.rs  records.rs  replay.rs  test_fixtures.rs  writes.rs
src/trapo-server/tests/: api.rs  db_manifest.rs  process_logging.rs
src/uocr-server/: CMakeLists.txt
src/uocr-server/cmake/: UocrDependencies.cmake
src/uocr-server/openapi/: uocr.openapi.json
src/uocr-server/tests/: core_tests.cpp  dependency_tests.cpp  download_tests.cpp  platform_tests.cpp  realtime_tests.cpp  render_tests.cpp  storage_tests.cpp
(+559 files in other folders)
