[workspace]
members = ["src/trapo-server"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/bangonkali/baidu-unlimited-ocr-portable"

[workspace.lints.rust]
missing_docs = "allow"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
