[package]
name = "trapo-downloader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable async downloader primitives for Trapo"
readme = "README.md"
keywords = ["download", "http", "tokio"]
categories = ["network-programming"]

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "webpki-roots"] }
tokio = { version = "1", features = ["fs", "io-util", "time"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

[lints]
workspace = true
