[package]
name = "trapo-xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Repository maintenance helpers for Trapo"
readme = "README.md"
keywords = ["xtask", "runtime", "trapo"]
categories = ["development-tools"]

[dependencies]
anyhow = "1"
flate2 = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls", "webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
zip = { version = "6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
