[package]
name = "trapo-server"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
name = "trapo_server"
path = "src/lib.rs"

[[bin]]
name = "trapo-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8.9", features = ["macros", "multipart", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
duckdb = "1.5.4"
futures-util = "0.3"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png", "tiff", "webp"] }
libloading = "0.9"
mime_guess = "2"
pdfium = "0.10.4"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream", "webpki-roots"] }
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
tower-http = { version = "0.7", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5.5.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
